--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name_viewer">SketchUp - Espectador</string>
-    <string name="app_name_settings">SketchUp - Configuraciones</string>
+    <string name="app_name_viewer">SketchIt - Espectador</string>
+    <string name="app_name_settings">SketchIt - Configuraciones</string>
 
     <string name="title_sketch">Bosquejo</string>
     <string name="title_album">Álbum</string>
