--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name_viewer">SketchUp - Visionneuse</string>
-    <string name="app_name_settings">SketchUp - Paramètres</string>
+    <string name="app_name_viewer">SketchIt - Visionneuse</string>
+    <string name="app_name_settings">SketchIt - Paramètres</string>
 
     <string name="title_sketch">Dessin</string>
     <string name="title_album">Gallerie</string>
