--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="rate_hint">Rate this app and take the occasion to give a feedback :)</string>
     <string name="share_this_app">Share this app to make you friends discover it</string>
     <string name="change_theme_color">You can change the color of the application by selecting another value below</string>
+    <string name="more">More</string>
 
 </resources>
