--- a/app/src/main/res/values-id/strings.xml
+++ b/app/src/main/res/values-id/strings.xml
@@ -28,5 +28,6 @@
     <string name="share_this_app">Bagikan aplikasi ini dengan teman Anda ;)</string>
     <string name="settings">pengaturan</string>
     <string name="change_theme_color">Anda dapat mengubah warna aplikasi dengan memilih nilai lain di bawah ini</string>
+    <string name="more">Lebih</string>
 
 </resources>
