--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -28,5 +28,6 @@
     <string name="share_this_app">Condividi questa app con i tuoi amici ;)</string>
     <string name="settings">impostazioni</string>
     <string name="change_theme_color">Puoi cambiare il colore dell\'applicazione selezionando un altro valore sotto</string>
+    <string name="more">Di Più</string>
 
 </resources>
