--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -28,5 +28,6 @@
     <string name="share_this_app">Compartilhe este aplicativo com seus amigos ;)</string>
     <string name="settings">configurações</string>
     <string name="change_theme_color">Você pode alterar a cor do aplicativo selecionando outro valor abaixo</string>
+    <string name="more">Mais</string>
 
 </resources>
