--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,6 @@
     <string name="change_theme_color">You can change the color of the application by selecting another value below</string>
     <string name="more">More</string>
     <string name="new_import">Import</string>
-    <string name="import_picture_from">Import picture from</string>
+    <string name="import_picture_from">Import picture with</string>
 
 </resources>
