--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -30,5 +30,6 @@
     <string name="change_theme_color">Vous pouvez changer le thème de l\'application en sélectionnant une valeur ci-dessous</string>
     <string name="more">Plus</string>
     <string name="new_import">Importer</string>
+    <string name="import_picture_from">Importer une image avec</string>
 
 </resources>
