--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -30,5 +30,6 @@
     <string name="change_theme_color">Вы можете изменить цвет приложения, выбрав другое значение ниже</string>
     <string name="more">Больше</string>
     <string name="new_import">импорт</string>
+    <string name="import_picture_from">Импортировать изображение с помощью</string>
 
 </resources>
