--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -10,7 +10,6 @@
     <string name="save">Guardar</string>
     <string name="share">Compartir</string>
     <string name="edit">Editar</string>
-    <string name="pen">Cepillo</string>
     <string name="color">Color</string>
     <string name="start_drawing_question">¿Comience un nuevo dibujo?</string>
     <string name="save_drawing_question">¿Guardar dibujo en la galería?</string>
@@ -31,5 +30,7 @@
     <string name="more">Más</string>
     <string name="new_import">importación</string>
     <string name="import_picture_from">Importar imagen con</string>
+    <string name="pen">cepillo</string>
+    <string name="style">estilo</string>
 
 </resources>
