--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -10,7 +10,6 @@
     <string name="save">Sauvegarder</string>
     <string name="share">Partager</string>
     <string name="edit">Éditer</string>
-    <string name="pen">Pinceau</string>
     <string name="color">Couleur</string>
     <string name="start_drawing_question">Démarrer un nouveau dessin?</string>
     <string name="save_drawing_question">Sauvegarder dans la galerie?</string>
@@ -31,5 +30,7 @@
     <string name="more">Plus</string>
     <string name="new_import">Importer</string>
     <string name="import_picture_from">Importer une image avec</string>
+    <string name="pen">Pinceau</string>
+    <string name="style">Style</string>
 
 </resources>
