--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,6 @@
     <string name="save">Save</string>
     <string name="share">Share</string>
     <string name="edit">Edit</string>
-    <string name="pen">Brush</string>
     <string name="color">Color</string>
     <string name="start_drawing_question">Start a new drawing?</string>
     <string name="save_drawing_question">Save drawing to the gallery?</string>
@@ -32,5 +31,7 @@
     <string name="more">More</string>
     <string name="new_import">Import</string>
     <string name="import_picture_from">Import picture with</string>
+    <string name="pen">Brush</string>
+    <string name="style">Style</string>
 
 </resources>
