--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -16,11 +16,11 @@
     <string name="action">Action</string>
     <string name="ask_delete_selection">Voulez-vous vraiment effacer la sélection?</string>
     <string name="sketch_view">Visionneuse</string>
-    <string name="sketch_saved">Dessin sauvegardé %1$s</string>
-    <string name="sketch_deleted">%1$s élement(s) supprimé %2$s</string>
+    <string name="sketch_saved">Dessin sauvegardé.</string>
+    <string name="sketch_deleted">%1$s élement(s) supprimé.</string>
     <string name="delete_all_sketches_hint">Vous pouvez éffacer tous les dessins en cliquant sur le bouton ci-dessous.</string>
     <string name="delete_all_sketches">Effacer tous les dessins</string>
-    <string name="all_sketches_deleted">Tous les dessins ont été effacés %1$s</string>
+    <string name="all_sketches_deleted">Tous les dessins ont été effacés.</string>
     <string name="confirm_delete_all_sketches">Êtes-vous sûre?</string>
     <string name="rate">Noter</string>
     <string name="rate_hint">Donnez une note à cette application est saisissez l\'occasion de nous laisser un commentaire.</string>
