--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,7 @@
     <string name="import_picture_from">Import picture with</string>
     <string name="pen">Brush</string>
     <string name="style">Style</string>
+    <string name="form">Form</string>
+    <string name="size">Size</string>
 
 </resources>
