--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="style">Style</string>
     <string name="shape">Shape</string>
     <string name="size">Size</string>
-    <string name="enable_smooth_drawing_hint">Enable smooth drawing to make the edges of your drawing less visible. If you experience slowdowns using this feature we recommend to disable it as it can happen on some devices.</string>
+    <string name="enable_smooth_drawing_hint">Activate the smooth drawing to make the edges of your features less visible. If you experience slowdowns using this feature, we recommend that you disable it because this can happen on some devices.</string>
     <string name="enable">Enable</string>
 
 </resources>
